# ballast-percolator-cli

./: .gitignore  .prettierignore  .socketrc  CLAUDE.md  README.md  audit-allowlist.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.lint.json  tsup.config.ts
.claude/: settings.json  settings.local.json.example
.claude/commands/: create-pr.md  implement-phase.md  review-prd-section.md  validate-step.md
.claude/hooks/: block-mutating-commands.mjs
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
config/: ballast-config.example.json
docs/: PRD-TEMPLATE.md  architecture.md  claude-repo-scaffold.md  claude-setup-rubric.md  handoff-layer2.md  handoff-layer3.md  handoff-layer4.md  phase-0-step-numbering.md  prd.md  pyth-oracle-compatibility.md  runbook.md  security-baseline-starter-kit.md  solana-program-version-strategy.md  supply-chain-hardening.md
docs/prompts/: KICKOFF_PROMPT.md  MATCHER_IMPL_HANDOFF.md  MATCHER_IMPL_KICKOFF.md  MATCHER_LAYOUT_RESHAPE_HANDOFF.md  MATCHER_LAYOUT_RESHAPE_KICKOFF.md  MATCHER_PR_HANDOFF.md  MATCHER_PR_KICKOFF.md  MATCHER_TS_HANDOFF.md  MATCHER_TS_KICKOFF.md
programs/ballast-matcher/: Cargo.toml
programs/ballast-matcher/.cargo/: audit.toml
programs/ballast-matcher/src/: lib.rs
programs/ballast-matcher/tests/: integration.rs
scripts/ballast/: setup-ballast-sol-market.ts
scripts/ballast/utils/: crank.ts  pyth.ts
test/: abi.test.ts  oracle.test.ts  pda.test.ts  slab.test.ts  validation.test.ts
